my second commit

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ border: border-box;
 {
 height: 60px;
 background-color: #0f1111;
-color: white;
+color: rgba(255, 255, 255, 0.864);
 display: flex;
 align-items: center;
 justify-content: space-evenly;
